<resources>
    <string name="app_name">Shoppinglist App</string>
    <string name="action_menu_help_text">Help</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addItemTextFieldText">Item to add to list</string>
    <string name="addItemButtonText">Add</string>
    <string name="addItemTextFieldHintText">Type the item to add to your list here</string>
    <string name="action_menu_clearList_Text">Clear</string>
    <string name="amount_of_item_needed">Amount of items needed:</string>
    <string name="name_of_the_item">Name of the item:</string>
    <string name="description_of_the_item">Description of the item:</string>
    <string name="description_of_the_item_hint">Description of the item</string>
    <string name="name_of_the_item_hint">Name of the item</string>
    <string name="amount_of_items_hint">Amount of items, leave empty for just 1</string>
    <string name="edit_the_amount_of_items_needed">Edit the amount of items needed</string>
</resources>
