<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemRecyclerViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewItemAmountAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/amount_of_item_needed"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextItemAmountAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/amount_of_items_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewItemNameAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_item"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/editTextItemNameAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_the_item_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewItemDescriptionAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_of_the_item"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/editTextItemDescriptionAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_of_the_item_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="sendData"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/image" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>