<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewItemAmountEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/edit_the_amount_of_items_needed"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editTextItemAmountEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewItemNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_item"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/editTextItemNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewItemDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_of_the_item"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/editTextItemDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="closeFragment"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/image__3_" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>